hero with modules

--- a/style.css
+++ b/style.css
@@ -11,4 +11,5 @@
  Text Domain:  cb-aa2025
  Tags: one-column, custom-menu, featured-images, theme-options, translation-ready
  GitHub Theme URI: understrap/cb-aa2025
+ shareddb-z.hosting.stackcp.net:wordpress-3136351d4b
 */
