--- a/src/sass/theme/blocks/_cb_hero.scss
+++ b/src/sass/theme/blocks/_cb_hero.scss
@@ -17,6 +17,7 @@
         height: 100%;
         z-index: -1;
         object-fit: cover;
+        object-position: bottom center;
     }
 
     &__content {
