--- a/src/sass/theme/blocks/_cb_hero.scss
+++ b/src/sass/theme/blocks/_cb_hero.scss
@@ -21,7 +21,7 @@
     }
 
     &__content {
-        margin-bottom: 3rem;
+        margin-bottom: 1rem;
     }
 
     .container {
@@ -33,6 +33,7 @@
     }
 
     &__icons {
+        margin-top: 2rem;
         display: flex;
         flex-wrap: wrap;
         column-gap: 3rem;
@@ -65,4 +66,9 @@
         margin: 0;
     }
 
+    &__image-img {
+        display: block;
+        width: max(300px, 80%);
+        margin-inline: auto;
+    }
 }
