--- a/src/sass/theme/blocks/_cb_scroll_snap.scss
+++ b/src/sass/theme/blocks/_cb_scroll_snap.scss
@@ -43,5 +43,12 @@
     &__buttons {
         display: flex;
         gap: 1rem;
+        align-items: center;
+    }
+
+    &__icon {
+        width: 50px;
+        height: 50px;
+        margin-bottom: 1rem;
     }
 }
