--- a/src/sass/theme/blocks/_cb_hero.scss
+++ b/src/sass/theme/blocks/_cb_hero.scss
@@ -30,6 +30,8 @@
 
     &__subtitle {
         font-size: var(--fs-500);
+        max-width: 70ch;
+        margin-inline: auto;
     }
 
     &__icons {
