--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -21951,7 +21951,7 @@ body .gform_wrapper .gform_footer button {
 
 @media (min-width: 992px) {
   .wp-block-group.alignfull > .wp-block-group__inner-container.wp-block-group-is-layout-constrained > .wp-block-heading:not(.has-text-align-center),
-.wp-block-group.alignfull > .wp-block-group__inner-container.wp-block-group-is-layout-constrained > p {
+.wp-block-group.alignfull > .wp-block-group__inner-container.wp-block-group-is-layout-constrained > p:not(.has-text-align-center) {
     max-width: min(64vw, 1000px);
   }
 }
