--- a/src/sass/theme/_header.scss
+++ b/src/sass/theme/_header.scss
@@ -42,6 +42,11 @@
         color: var(--col-accent-400);
     }
 
+    .nav-item.active .nav-link {
+        color: gold;
+        font-weight: bold;
+    }
+
     .nav-link {
         cursor: pointer;
         padding-top: 0;
